fix scrollbar issue

--- a/src/components/nav/Nav.module.css
+++ b/src/components/nav/Nav.module.css
@@ -13,7 +13,7 @@
   max-width: 16rem;
   padding: 1rem;
   overscroll-behavior: none;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .link {
